/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "com.dremio.service.executorservice";
option optimize_for = SPEED;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ExecutorsServiceRPC";

package dremio.executorservice;

import "CoordExecRPC.proto";
import "google/protobuf/empty.proto";

service ExecutorService {

  rpc StartFragments(exec.bit.control.InitializeFragments) returns (google.protobuf.Empty) {}

  rpc ActivateFragment (exec.bit.control.ActivateFragments) returns (google.protobuf.Empty) {}

  rpc CancelFragments(exec.bit.control.CancelFragments) returns (google.protobuf.Empty) {}

  rpc GetNodeStats(google.protobuf.Empty) returns (exec.bit.control.NodeStatResp) {}
}


